# syla-api-gateway

./: Cargo.toml  Dockerfile  Dockerfile.dev  Makefile  build.rs
proto/: common  google  syla.proto
src/: auth.rs  error.rs  execution.rs  grpc.rs  main.rs  proto.rs  state.rs
src/clients/: execution.rs  mod.rs
